src/styles/components/header.css
/* Header */

.header {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(3, 1fr);

    margin: 0 auto;
    padding: 50px;
    z-index: 2;

    transition: ease 0.3s;
}

@media (max-width: 768px) {
    .header {
        padding: 10px;
        
        position: fixed;
        top: 0;
        width: 100%;
    }

    .header--scrolled {
        background-color: #f7f5f2d6;
        padding: 10px;
    }
}

@media (min-width: 768px) {
    .header {
        position: fixed;
        top: 0;
        width: 100%;
    }
}

.header--scrolled {
    background-color: #f7f5f2d6;
    padding: 10px 50px;
}

.header--scrolled .header__logo {
    font-size: 30px;
}

.header--scrolled .header__logo--second {
    font-size: 15px;
}

/* Logo */

.header__logo {
    text-align: center;

    font-size: 45px;
    font-weight: 400;
    line-height: 1.3;
    color: #747474;

    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 100;

    transition: ease 0.3s;
}

.header__logo--first {
    letter-spacing: 8;
    transition: ease 0.3s;
}

.header__logo--second {
    font-size: 30px;
    font-weight: 300;
    transition: ease 0.3s;
}

@media (max-width: 768px) {
    .header__logo {
        font-size: 30px;
    }

    .header__logo--second {
        font-size: 15px;
    }
}

/* Menu */

.header__menu {
    display: flex;
    gap: 62px;
    flex-direction: row;
    align-items: center;
}

.header__link {
    font-weight: 700;
    letter-spacing: 0.5px;
    color: #343434;
}

/* Burger */

.header__burger {
    display: none;
}

@media (max-width: 768px) {
    .header {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .header__burger {
        display: block;
        width: 30px;
        height: 20px;
        position: relative;
        cursor: pointer;
        margin-left: auto;
        background-color: transparent;
        z-index: 100;
    }

    .header__burger::before,
    .header__burger::after {
        content: '';
        position: absolute;
        left: 0;
        height: 2px;
        background-color: #343434;
        transition: all 0.3s ease 0s;
    }

    .header__burger::before {
        top: 0;
        left: 0;
        width: 100%;
    }

    .header__burger::after {
        bottom: 0;
        right: 0;
        width: 100%;
    }

    .header__burger span {
        position: absolute;
        left: 0px;
        bottom: 9px;
        width: 100%;
        height: 2px;
        background-color: #343434;
        transition: all 0.4s ease 0s;
    }

    .header__burger.header__menu--active::before {
        top: 9px;
        transform: rotate(-45deg);
        width: 100%;
    }

    .header__burger.header__menu--active::after {
        bottom: 9px;
        transform: rotate(45deg);
        width: 100%;
    }

    .header__burger.header__menu--active span {
        left: 100%;
        opacity: 0;
    }

    .header__menu {
        position: fixed;
        left: 0;
        top: -100%;
        overflow-y: auto;
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        flex-direction: column;
        gap: 60px;
        padding: 150px 0px 0px 0px;
        transition: top 0.3s ease 0s;
        background-color: #f7f5f2;
        z-index: 99;
    }

    .header__menu.header__menu--active {
        top: 0;
    }
}

